feat: add scheduled monitoring for Granola webhook integration
- Switch default environment to production in config files
- Add shell script for cron-based webhook monitoring
- Add Node.js scheduled monitoring alternative
- Create documentation for setting up automated monitoring
- Support running webhook monitor with specific meeting IDs

--- a/webhook-config.example.json
+++ b/webhook-config.example.json
@@ -16,7 +16,7 @@
     }
   },
   "webhook": {
-    "activeEnvironment": "test",
+    "activeEnvironment": "production",
     "secret": "your-webhook-signing-secret",
     "maxRetries": 3,
     "retryStrategy": "exponential",
