refactor: rename to granola-automation-client with proper attribution
Update package name from granola-ts-client to granola-automation-client
to better reflect the comprehensive automation capabilities beyond basic
API client functionality.

Changes:
- Update package.json name and description
- Add attribution section to README acknowledging foundational API work
- Update all import statements and package references in documentation
- Rename project title to "Granola Automation Client"
- Update example configurations and setup guides
- Maintain all existing functionality while clarifying project scope

The new name accurately represents the system's capabilities as a complete
meeting automation platform rather than just an API wrapper.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "granola-ts-client",
+  "name": "granola-automation-client",
   "version": "0.7.0",
-  "description": "TypeScript client for the Granola API with automatic client validation bypass",
+  "description": "Comprehensive automation system for Granola meetings with multi-destination delivery and notifications",
   "type": "module",
   "exports": {
     ".": {
