feat: implement comprehensive testing strategy with reliable contract tests
- Add Zod schema validation for all data structures
- Create reliable contract tests for webhooks, Airtable, and notifications
- Implement retry logic testing with configurable strategies
- Add canary tests for production readiness monitoring
- Remove false-positive tests and unreliable mock implementations
- Clean up test infrastructure and remove unused dependencies
- Update package.json with proper test scripts and CI pipeline

Testing approach follows 80/20 principle with focus on:
- Contract tests for external API integration points
- Schema validation for runtime type safety
- Retry logic verification with linear/exponential backoff
- Production monitoring through canary test suite

--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "build:types": "tsc -p tsconfig.build.json",
     "build:schema": "cp src/schema.d.ts dist/",
     "test": "bun test",
+    "test:unit": "bun test tests/ --ignore tests/canary.test.ts",
+    "test:canary": "CANARY_TESTS=true bun test tests/canary.test.ts",
+    "test:fast": "bun run test:unit",
+    "test:all": "bun run test:fast && bun run test:canary",
     "format": "biome format . --write",
     "lint": "biome check .",
-    "ci": "bun run lint && bun run test && bun run build",
+    "ci": "bun run lint && bun run test:fast && bun run build",
     "prepublishOnly": "bun run ci"
   },
   "dependencies": {
