--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,10 @@ jobs:
       run: bun run lint
     
     - name: Test
-      run: bun run test
+      run: bun run test:fast
     
     - name: Build
       run: bun run build
-    
-    - name: Generate docs
-      run: bun run docs
     
     - name: Upload artifact
       uses: actions/upload-artifact@v4
