fix: update tsconfig.build.json to use bundler module resolution for proper type generation

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,6 +6,8 @@
     "declarationMap": true,
     "emitDeclarationOnly": true,
     "outDir": "dist",
-    "moduleResolution": "node"
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": false,
+    "verbatimModuleSyntax": false
   }
 }
