fix: resolve CI TypeScript module resolution issues
Based on analysis from Gemini 2.5 Pro and O3, the root cause was:
- CI uses tsconfig.build.json with different module resolution flags than tsconfig.json
- allowImportingTsExtensions: false prevented .js imports from working
- Missing explicit inclusion of .d.ts files in build context

Changes:
- Unify compiler flags between main and build configs for consistency
- Add explicit include/exclude arrays to ensure schema.d.ts is found
- Add CI debugging step to verify file state and TypeScript versions

This ensures the same module resolution behavior in both local and CI environments.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,16 @@ jobs:
     - name: Test
       run: bun run test:fast
     
+    - name: Debug TypeScript Module Resolution
+      run: |
+        echo "--- Verifying schema imports in source files ---"
+        grep -n "from './schema" src/*.ts || echo "No schema imports found"
+        echo "--- Checking if schema.d.ts exists ---"
+        ls -la src/schema*
+        echo "--- TypeScript version ---"
+        bun --version
+        npx tsc --version
+    
     - name: Build
       run: bun run build
     
