--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "verbatimModuleSyntax": true,
     "noEmit": true,
 
+    // Path mapping for OpenAPI schema types
+    "baseUrl": ".",
+    "paths": {
+      "#schema": ["src/schema.d.ts"]
+    },
+
     // Best practices
     "strict": true,
     "skipLibCheck": true,
