--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "LICENSE"
   ],
   "scripts": {
-    "generate": "openapi-typescript openapi.yaml -o src/schema.d.ts",
+    "generate": "openapi-typescript openapi.yaml -o src/schema-generated.d.ts",
     "build": "bun build src/index.ts --outdir dist --target node && bun run build:types && bun run build:schema",
     "build:types": "tsc -p tsconfig.build.json",
-    "build:schema": "cp src/schema.d.ts dist/",
+    "build:schema": "cp src/schema-generated.d.ts dist/ && cp src/schema.ts dist/",
     "test": "bun test",
     "test:unit": "bun test tests/ --ignore tests/canary.test.ts",
     "test:canary": "CANARY_TESTS=true bun test tests/canary.test.ts",
